--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="night">
+<html lang="en" data-theme="business">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="text/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-en-un-seul-project</title>
+    <title>T Mushamuka</title>
   </head>
   <body>
     <div id="root"></div>
